cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(tictactoe VERSION 1.0)
file(GLOB_RECURSE SRC_FILES srcs/*.c)
file(GLOB_RECURESE HEADER_FILES srcs/*.h))
add_executable(tictactoe main.c ${SRC_FILES})
target_include_directories(tictactoe PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${HEADER_FILES})
